force-app/main/default/objects/Contact/fields/Antiguedad_del__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad_del__c</fullName>
    <label>Antiguedad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>