force-app/main/default/objects/Contact/fields/Cargo_desempena__c.field-meta.xml
<CustomField>
    <fullName>Cargo_desempena__c</fullName>
    <label>Cargo Actual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>