force-app/main/default/objects/Contact/fields/Cliente_Localizable__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Localizable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente Localizable</label>
    <type>Checkbox</type>
</CustomField>