force-app/main/default/objects/Contact/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Listo Para Informe</fullName>
            </value>
            <value>
                <fullName>Informe Ejecutado</fullName>
            </value>
            <value>
                <fullName>No Aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>