force-app/main/default/objects/Contact/fields/Fecha_ingreso_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ingreso_Empresa__c</fullName>
    <label>Fecha ingreso a la empresa</label>
    <type>Date</type>
</CustomField>