force-app/main/default/objects/Contact/fields/LP_CodigoOTP__c.field-meta.xml
<CustomField>
    <fullName>LP_CodigoOTP__c</fullName>
    <label>Código OTP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>