force-app/main/default/objects/Contact/fields/Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad__c</fullName>
    <label>Nacionalidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Afgano</fullName>
            </value>
            <value>
                <fullName>Alemán</fullName>
            </value>
            <value>
                <fullName>Árabe</fullName>
            </value>
            <value>
                <fullName>Argentino</fullName>
            </value>
            <value>
                <fullName>Australiano</fullName>
            </value>
            <value>
                <fullName>Belga</fullName>
            </value>
            <value>
                <fullName>Boliviano</fullName>
            </value>
            <value>
                <fullName>Brasilero</fullName>
            </value>
            <value>
                <fullName>Camboyano</fullName>
            </value>
            <value>
                <fullName>Canadiense</fullName>
            </value>
            <value>
                <fullName>Chileno</fullName>
            </value>
            <value>
                <fullName>Chino</fullName>
            </value>
            <value>
                <fullName>Colombiano</fullName>
            </value>
            <value>
                <fullName>Coreano</fullName>
            </value>
            <value>
                <fullName>Costarricense</fullName>
            </value>
            <value>
                <fullName>Cubano</fullName>
            </value>
            <value>
                <fullName>Danés</fullName>
            </value>
            <value>
                <fullName>Ecuatoriano</fullName>
            </value>
            <value>
                <fullName>Egipcio</fullName>
            </value>
            <value>
                <fullName>Salvadoreño</fullName>
            </value>
            <value>
                <fullName>Español</fullName>
            </value>
            <value>
                <fullName>Estadounidense</fullName>
            </value>
            <value>
                <fullName>Estonio</fullName>
            </value>
            <value>
                <fullName>Etiope</fullName>
            </value>
            <value>
                <fullName>Filipino</fullName>
            </value>
            <value>
                <fullName>Finlandés</fullName>
            </value>
            <value>
                <fullName>Francés</fullName>
            </value>
            <value>
                <fullName>Galés</fullName>
            </value>
            <value>
                <fullName>Griego</fullName>
            </value>
            <value>
                <fullName>Guatemalteco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>