force-app/main/default/objects/Contact/fields/Nivel_Educativo__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Educativo__c</fullName>
    <label>Nivel Educativo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NINGUNA</fullName>
            </value>
            <value>
                <fullName>POSTGRADO</fullName>
            </value>
            <value>
                <fullName>PRIMARIA</fullName>
            </value>
            <value>
                <fullName>SECUNDARIA</fullName>
            </value>
            <value>
                <fullName>SUPERIOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>