force-app/main/default/objects/Contact/fields/Profesion_Ocupacion__c.field-meta.xml
<CustomField>
    <fullName>Profesion_Ocupacion__c</fullName>
    <label>Profesión Ocupación u Oficio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>