force-app/main/default/objects/Contact/fields/Receive_Birthday_Emails__c.field-meta.xml
<CustomField>
    <fullName>Receive_Birthday_Emails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Receive_Birthday_Emails</label>
    <type>Checkbox</type>
</CustomField>