force-app/main/default/objects/Contact/fields/Reset_Birthday_Email_System__c.field-meta.xml
<CustomField>
    <fullName>Reset_Birthday_Email_System__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Reset_Birthday_Email_System</label>
    <type>Checkbox</type>
</CustomField>