force-app/main/default/objects/Contact/fields/Trabaja__c.field-meta.xml
<CustomField>
    <fullName>Trabaja__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trabaja</label>
    <type>Checkbox</type>
</CustomField>