force-app/main/default/objects/Contact/listViews/Contactos_Juridicos.listView-meta.xml
<ListView>
    <fullName>Contactos_Juridicos</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Contactos Juridicos</label>
</ListView>